Saving the best model

--- a/index.ipynb
+++ b/index.ipynb
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,41 @@
       "[LightGBM] [Info] Total Bins 1214\n",
       "[LightGBM] [Info] Number of data points in the train set: 36000, number of used features: 22\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.222222 -> initscore=-1.252763\n",
-      "[LightGBM] [Info] Start training from score -1.252763\n"
+      "[LightGBM] [Info] Start training from score -1.252763\n",
+      "[LightGBM] [Info] Number of positive: 8000, number of negative: 28000\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001746 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1220\n",
+      "[LightGBM] [Info] Number of data points in the train set: 36000, number of used features: 22\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.222222 -> initscore=-1.252763\n",
+      "[LightGBM] [Info] Start training from score -1.252763\n",
+      "[LightGBM] [Info] Number of positive: 8000, number of negative: 28000\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002686 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1222\n",
+      "[LightGBM] [Info] Number of data points in the train set: 36000, number of used features: 22\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.222222 -> initscore=-1.252763\n",
+      "[LightGBM] [Info] Start training from score -1.252763\n",
+      "[LightGBM] [Info] Number of positive: 8000, number of negative: 28000\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001947 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1172\n",
+      "[LightGBM] [Info] Number of data points in the train set: 36000, number of used features: 22\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.222222 -> initscore=-1.252763\n",
+      "[LightGBM] [Info] Start training from score -1.252763\n",
+      "[LightGBM] [Info] Number of positive: 8000, number of negative: 28000\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001094 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1209\n",
+      "[LightGBM] [Info] Number of data points in the train set: 36000, number of used features: 22\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.222222 -> initscore=-1.252763\n",
+      "[LightGBM] [Info] Start training from score -1.252763\n",
+      "\n",
+      "Cross-validation accuracy: 0.93 (+/- 0.01)\n"
      ]
     }
    ],
@@ -1278,9 +1312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved as loan_approval_model.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "model_file = 'loan_approval_model.pkl'\n",
